# rosbot2

./: .gitignore  README.md  teleop_twist_keyboard.py
env_rosbot/: pyvenv.cfg
rosbot/: CMakeLists.txt  package.xml
rosbot-telepresence/: .env  compose.custom.yaml  filterCustom.yaml  justfile
rosbot-telepresence/config/: rosbot.rviz
rosbot/config/: rviz_config.rviz
rosbot/include/rosbot/: lidar.hpp
rosbot/launch/: rosbot.launch.py
rosbot/src/: lidar.cpp
rosbot/urdf/: rosbot.urdf.xacro
