<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosbot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="cyberasasoftware@gmail.com">asaace00</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>ros2launch</exec_depend>

  <depend>rclcpp</depend>

  <export>
   <launch>
      <launch_file>rosbot.launch.py</launch_file>
   </launch>
   <architecture_independent/>
   <build_type>ament_cmake</build_type>
</export>

</package>
